fix: post-card tag style, align

--- a/css/style.css
+++ b/css/style.css
@@ -6740,7 +6740,7 @@ button.testimonial-arrow-btn:hover:before {
   z-index: 3;
   gap: 24px;
 }
-.post-card .content .tag-wrapper .tag-item {
+.post-card .content .tag-wrapper .tag-item a {
   padding: 4px 12px;
   border-radius: 8px;
   background: #FFF0D8;
@@ -6750,7 +6750,7 @@ button.testimonial-arrow-btn:hover:before {
   font-weight: 500;
   line-height: 140%;
 }
-.post-card .content .tag-wrapper .tag-item:hover {
+.post-card .content .tag-wrapper .tag-item a:hover {
   background-color: #161616;
   color: #FFF0D8;
 }
